[package]
name = "stremio-rust-memes"
version = "0.1.0"
authors = ["simzzz <simeon_nakov@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "*"
reqwest = "0.9.x"
select = "0.4.x"
stremio-core = { git = "https://github.com/stremio/stremio-core" }
serde_json = "1.x.x"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
